/* Copyright 2020 Istio Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

// $title: Basic Auth Config
// $description: Configuration for Basic Auth Filter.
// $weight: 20

// The following is an example of a configuration that restricts access to
// given paths matching a prefix or exact pattern, request methods and
// credentials.
// {
//   "basic_auth_rules": [
//     {
//       "request_path":{"exact": "/api/reviews/pay"},
//       "request_methods":[ "GET", "POST" ],
//       "credentials":[ "admin:admin", "admin2:admin2" ]
//     },
//     {
//       "request_path":{ "prefix":"/api" },
//       "request_methods":[ "GET", "POST" ],
//       "credentials":[ "admin:admin", "admin2:admin2" ]
//     }
//   ]
// }

package basic_auth;

import "google/protobuf/duration.proto";

message PluginConfig {
  // Specifies a list of basic auth rules
  repeated BasicAuth basic_auth_rules = 1;
}

message BasicAuth {
  // HTTP path to restrict access according match pattern specification.
  PathMatcher request_path = 1;

  // HTTP requets method operations such as GET, POST, HEAD, PUT, and DELETE.
  repeated string request_methods = 2;

  // Credentials provided in the form username:password.
  repeated string credentials = 3;
}

message PathMatcher {
  oneof match_pattern {
    // match exact pattern in request_path
    string exact = 1;

    // match prefix pattern in request_path
    string prefix = 2;

    // match suffix pattern in request_path
    string suffix = 3;
  }
}